# rusts

./: .gitignore
auto_test/: Cargo.toml
auto_test/src/: lib.rs
bank_account/: Cargo.toml
bank_account/src/: main.rs
branches/: Cargo.toml
branches/src/: main.rs
calculator/src/: main.rs
closures_iters/: Cargo.toml
closures_iters/src/: main.rs
code_management/: Cargo.toml
code_management/src/: front_of_house.rs  main.rs
collections/: Cargo.toml
collections/src/: main.rs
diesel_demo/: Cargo.toml
diesel_demo/src/: lib.rs  models.rs
enugs/: Cargo.toml
enugs/src/: main.rs
enums/: Cargo.toml
enums/src/: main.rs
error_handling/: Cargo.toml
error_handling/src/: main.rs
fibonacci/: Cargo.toml
functions/: Cargo.toml
generics/: Cargo.toml
guessing_game/: Cargo.toml
hello_cargo/: Cargo.toml
hello_world/: main  main.rs
matchling/: Cargo.toml
methods/: Cargo.toml
minigrep/: :CASE_INSENSITIVE=1  Cargo.toml
ownership/: Cargo.toml
rust_auth_service/: Cargo.toml  Procfile
rust_auth_service/migrations/2021-06-21-211359_users/: up.sql
rust_auth_service/migrations/2021-06-21-211417_invitations/: down.sql  up.sql
rust_auth_service/src/: main.rs  models.rs
rust_auth_service/src/handlers/: auth_handler.rs  invitation_handler.rs  mod.rs  register_handler.rs
rust_auth_service/src/utils/: email_service.rs  mod.rs  password_hash.rs  requests.rs  responses.rs
rust_bucket_list/: Cargo.toml
simple_blog/: Cargo.toml
structs/: Cargo.toml
temp_converter/: Cargo.toml
todo_cli/: Cargo.toml
variables/: Cargo.toml
(+26 files in other folders)
